# ocrme

./: README.md  pyproject.toml  setup.py
ocrme/: ocrme.py
