[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrme"
version = "0.1.0"
description = "A CLI tool to extract text and math formulas from a PDF and save it as Markdown."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.16.0",
    "pillow>=9.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[project.scripts]
ocrme = "ocrme.ocrme:ocrme"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocrme*"]
exclude = ["tests*"]
